--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "buffer": "^6.0.3",
+    "chart.js": "^4.1.2",
+    "html-react-parser": "^3.0.7",
     "material-ui": "^1.0.0-beta.47",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.0",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.2.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
