--- a/package.json
+++ b/package.json
@@ -1,35 +1,23 @@
 {
-  "name": "cryptotracker",
+  "name": "crypto-tracker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/lab": "^4.0.0-alpha.61",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/lab": "^5.0.0-alpha.114",
-    "@mui/material": "^5.11.3",
-    "@mui/styled-engine-sc": "^5.11.0",
-    "@mui/styles": "^5.11.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.2",
-    "buffer": "^6.0.3",
-    "chart.js": "^4.1.2",
-    "html-react-parser": "^3.0.7",
-    "material-ui": "^1.0.0-beta.47",
-    "react": "^17.0.0",
-    "react-alice-carousel": "^2.7.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "chart.js": "^3.5.1",
+    "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-chartjs-2": "^3.0.4",
-    "react-dom": "^18.2.0",
+    "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
-    "react-router-dom": "^6.6.1",
-    "react-scripts": "5.0.1",
-    "recharts": "^2.2.0",
-    "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
