--- a/package.json
+++ b/package.json
@@ -18,6 +18,33 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.114",
+    "@mui/material": "^5.11.3",
+    "@mui/styled-engine-sc": "^5.11.0",
+    "@mui/styles": "^5.11.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.2",
+    "buffer": "^6.0.3",
+    "chart.js": "^4.1.2",
+    "html-react-parser": "^3.0.7",
+    "material-ui": "^1.0.0-beta.47",
+    "react": "^18.2.0",
+    "react-alice-carousel": "^2.7.0",
+    "react-chartjs-2": "^3.0.4",
+    "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
+    "react-router-dom": "^6.6.1",
+    "react-scripts": "5.0.1",
+    "recharts": "^2.2.0",
+    "styled-components": "^5.3.6",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
