--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "axios": "^0.21.1",
     "chart.js": "^3.5.1",
     "react": "^17.0.2",
-    "react-alice-carousel": "^2.5.1",
+    "react-alice-carousel": "^2.7.0",
     "react-chartjs-2": "^3.0.4",
+    "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
+    "react-router-dom": "^6.6.1",
+    "react-scripts": "5.0.1",
+    "recharts": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.2.0",
